add country names

--- a/docs/data/labels_mapping.json
+++ b/docs/data/labels_mapping.json
@@ -32,111 +32,111 @@
   },
   "ioc": {
     "All": "All",
-    "ALG": "ALG",
-    "AND": "AND",
-    "ARG": "ARG",
-    "ARM": "ARM",
-    "AUS": "AUS",
-    "AUT": "AUT",
-    "AZE": "AZE",
-    "BAH": "BAH",
-    "BAR": "BAR",
-    "BEL": "BEL",
-    "BIH": "BIH",
-    "BLR": "BLR",
-    "BOL": "BOL",
-    "BRA": "BRA",
-    "BUL": "BUL",
-    "CAN": "CAN",
-    "CHI": "CHI",
-    "CHN": "CHN",
-    "CIV": "CIV",
-    "COL": "COL",
-    "CRC": "CRC",
-    "CRO": "CRO",
-    "CYP": "CYP",
-    "CZE": "CZE",
-    "DEN": "DEN",
-    "DOM": "DOM",
-    "ECU": "ECU",
-    "EGY": "EGY",
-    "ESA": "ESA",
-    "ESP": "ESP",
-    "EST": "EST",
-    "FIN": "FIN",
-    "FRA": "FRA",
-    "GBR": "GBR",
-    "GEO": "GEO",
-    "GER": "GER",
-    "GRE": "GRE",
-    "HAI": "HAI",
-    "HKG": "HKG",
-    "HUN": "HUN",
-    "INA": "INA",
-    "IND": "IND",
-    "IRI": "IRI",
-    "IRL": "IRL",
-    "ISR": "ISR",
-    "ITA": "ITA",
-    "JAM": "JAM",
-    "JOR": "JOR",
-    "JPN": "JPN",
-    "KAZ": "KAZ",
-    "KEN": "KEN",
-    "KOR": "KOR",
-    "KUW": "KUW",
-    "LAT": "LAT",
-    "LBN": "LBN",
-    "LIE": "LIE",
-    "LTU": "LTU",
-    "LUX": "LUX",
-    "MAD": "MAD",
-    "MAR": "MAR",
-    "MAS": "MAS",
-    "MDA": "MDA",
-    "MEX": "MEX",
-    "MKD": "MKD",
-    "MNE": "MNE",
-    "MON": "MON",
-    "NED": "NED",
-    "NGR": "NGR",
-    "NOR": "NOR",
-    "NZL": "NZL",
-    "OMA": "OMA",
-    "PAK": "PAK",
-    "PAR": "PAR",
-    "PER": "PER",
-    "PHI": "PHI",
-    "POL": "POL",
-    "POR": "POR",
-    "PUR": "PUR",
-    "QAT": "QAT",
-    "ROU": "ROU",
-    "RSA": "RSA",
-    "RUS": "RUS",
-    "SCG": "SCG",
-    "SEN": "SEN",
-    "SGP": "SGP",
-    "SLO": "SLO",
-    "SRB": "SRB",
-    "SUI": "SUI",
-    "SVK": "SVK",
-    "SWE": "SWE",
-    "TCH": "TCH",
-    "THA": "THA",
-    "TOG": "TOG",
-    "TPE": "TPE",
-    "TUN": "TUN",
-    "TUR": "TUR",
-    "UAE": "UAE",
-    "UKR": "UKR",
-    "URS": "URS",
-    "URU": "URU",
-    "USA": "USA",
-    "UZB": "UZB",
-    "VEN": "VEN",
-    "VIE": "VIE",
-    "YUG": "YUG",
-    "ZIM": "ZIM"
+    "Algeria": "ALG",
+    "Andorra": "AND",
+    "Argentina": "ARG",
+    "Armenia": "ARM",
+    "Australia": "AUS",
+    "Austria": "AUT",
+    "Azerbaijan": "AZE",
+    "Bahamas": "BAH",
+    "Barbados": "BAR",
+    "Belgium": "BEL",
+    "Bosnia and Herzegovina": "BIH",
+    "Belarus": "BLR",
+    "Bolivia": "BOL",
+    "Brazil": "BRA",
+    "Bulgaria": "BUL",
+    "Canada": "CAN",
+    "Chile": "CHI",
+    "China": "CHN",
+    "Côte d'Ivoire": "CIV",
+    "Colombia": "COL",
+    "Costa Rica": "CRC",
+    "Croatia": "CRO",
+    "Cyprus": "CYP",
+    "Czech Republic": "CZE",
+    "Denmark": "DEN",
+    "Dominican Republic": "DOM",
+    "Ecuador": "ECU",
+    "Egypt": "EGY",
+    "El Salvador": "ESA",
+    "Spain": "ESP",
+    "Estonia": "EST",
+    "Finland": "FIN",
+    "France": "FRA",
+    "United Kingdom": "GBR",
+    "Georgia": "GEO",
+    "Germany": "GER",
+    "Greece": "GRE",
+    "Haiti": "HAI",
+    "Hong Kong": "HKG",
+    "Hungary": "HUN",
+    "Indonesia": "INA",
+    "India": "IND",
+    "Iran": "IRI",
+    "Ireland": "IRL",
+    "Israel": "ISR",
+    "Italy": "ITA",
+    "Jamaica": "JAM",
+    "Jordan": "JOR",
+    "Japan": "JPN",
+    "Kazakhstan": "KAZ",
+    "Kenya": "KEN",
+    "South Korea": "KOR",
+    "Kuwait": "KUW",
+    "Latvia": "LAT",
+    "Lebanon": "LBN",
+    "Liechtenstein": "LIE",
+    "Lithuania": "LTU",
+    "Luxembourg": "LUX",
+    "Madagascar": "MAD",
+    "Morocco": "MAR",
+    "Malaysia": "MAS",
+    "Moldova": "MDA",
+    "Mexico": "MEX",
+    "North Macedonia": "MKD",
+    "Montenegro": "MNE",
+    "Monaco": "MON",
+    "Netherlands": "NED",
+    "Nigeria": "NGR",
+    "Norway": "NOR",
+    "New Zealand": "NZL",
+    "Oman": "OMA",
+    "Pakistan": "PAK",
+    "Paraguay": "PAR",
+    "Peru": "PER",
+    "Philippines": "PHI",
+    "Poland": "POL",
+    "Portugal": "POR",
+    "Puerto Rico": "PUR",
+    "Qatar": "QAT",
+    "Romania": "ROU",
+    "South Africa": "RSA",
+    "Russia": "RUS",
+    "Serbia and Montenegro": "SCG",
+    "Senegal": "SEN",
+    "Singapore": "SGP",
+    "Slovenia": "SLO",
+    "Serbia": "SRB",
+    "Switzerland": "SUI",
+    "Slovakia": "SVK",
+    "Sweden": "SWE",
+    "Czechoslovakia": "TCH",
+    "Thailand": "THA",
+    "Togo": "TOG",
+    "Chinese Taipei": "TPE",
+    "Tunisia": "TUN",
+    "Turkey": "TUR",
+    "United Arab Emirates": "UAE",
+    "Ukraine": "UKR",
+    "Soviet Union": "URS",
+    "Uruguay": "URU",
+    "United States": "USA",
+    "Uzbekistan": "UZB",
+    "Venezuela": "VEN",
+    "Vietnam": "VIE",
+    "Yugoslavia": "YUG",
+    "Zimbabwe": "ZIM"
   }
 }
